@@ -25,6 +25,8 @@
       stylesheets now handled in the context menu
     * Add delete/close and filter actions to the context menu
     * Add a system to export, import and reset preferences
+    * Add function to break HTML tags for posting by selecting text in the
+      message box and right clicking
 
 2008-11-01:
     * version 0.6.7
